2015-12-20  Markus Gans  <guru.mail@muenster.de>
	* Bug fix in FTerm updateVTerm() for updates from vdesktop
	* Add raiseWindow() to FMenuBar::leaveMenuBar()
	* Fix allocation of null strings with the FString = operator
	* Fix for non printable characters in Cygwin and TeraTerm
	* Fix missing eat_newline_glitch (xn) in TeraTerm

2015-12-19  Markus Gans  <guru.mail@muenster.de>
	* Add delOwnTimer() for FObject
	* Close sub-menu on right and middle click
	* Version 0.2.0

2015-12-18  Markus Gans  <guru.mail@muenster.de>
	* Optimize menu example
	* More string types for FString relational operators 

2015-12-16  Markus Gans  <guru.mail@muenster.de>
	* Avoid to show menus outside of the screen

2015-12-12  Markus Gans  <guru.mail@muenster.de>
	* Improve sub-sub-menu handling

2015-12-10  Markus Gans  <guru.mail@muenster.de>
	* PC encoding: Avoid to print ASCII sign 0x00..0x1f in xterm
	* Newfont Bullet sign

2015-12-08  Markus Gans  <guru.mail@muenster.de>
	* Add "menu" example to demonstrate the behavior from FMenuBar, 
	  FMenu, FMenuItem, FCheckMenuItem and FRadioMenuItem widgets.
	* Show status bar messages, if no keys are available.

2015-11-29  Markus Gans  <guru.mail@muenster.de>
	* Better handling of empty strings in FLineEdit and FButton
	* Add a sub-menu to the "ui.cpp" example

2015-11-25  Markus Gans  <guru.mail@muenster.de>
	* Small menu improvements

2015-11-24  Markus Gans  <guru.mail@muenster.de>
	* Improved mouse and keyboard handling in sub-menus

2015-11-22  Markus Gans  <guru.mail@muenster.de>
	* Add sub-menu support

2015-11-19  Markus Gans  <guru.mail@muenster.de>
	* Add the missing resetXTermHighlightBackground method

2015-11-15  Markus Gans  <guru.mail@muenster.de>
	* Add two new classes FCheckMenuItem and FRadioMenuItem 
	  for menu check marks and menu option marks (bullets)

2015-11-12  Markus Gans  <guru.mail@muenster.de>
	* Improve menu accelerator keys
	* Shows accelerator keys on the right side of the FMenu.
