@@ -1,4 +1,11 @@
 2015-12-20  Markus Gans  <guru.mail@muenster.de>
+	* Add the possibility to switch off the cursor optimization 
+	  for bad ANSI-terminal implementations like HyperTerminal 
+	  (e.g. horizontal absolute position (ch) has there no function)
+	* Now you can activate the menu with ctrl+space, too. 
+	  (For terminals with no meta key support)
+
+2015-12-20  Markus Gans  <guru.mail@muenster.de>
 	* Bug fix in FTerm updateVTerm() for updates from vdesktop
 	* Add raiseWindow() to FMenuBar::leaveMenuBar()
 	* Fix allocation of null strings with the FString = operator
